# ark-fflonk-verifier

./: Cargo.toml  README.md  rust-toolchain
.github/workflows/: ci.yml
benches/: bench.rs
examples/: verifier_example.rs
resources/circom/: README.md  proof.json  public.json  verification_key.json  verifier.sol
resources/circom-blake3/: README.md  circuit.circom  proof.json  verification_key.json  verifier.sol
resources/contracts/: fflonkVerifier.sol
resources/snarkjs/: README.md  input.json  multiple_circuit.circom
src/: challenge.rs  compute_a1.rs  compute_fej.rs  compute_lagrange.rs  compute_pi.rs  compute_r.rs  dummy.rs  inversion.rs  lib.rs  main.rs  mock.rs  pairing.rs  proof.rs  serde.rs  test.rs  utils.rs  verifier.rs  vk.rs
src/challenge/: mod.rs  root.rs
src/transcript/: mod.rs
tests/: circom_fflonk_proof_verifier.rs
