[package]
name = "ark-fflonk-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false, features = ["derive"] }
ark-poly = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", features = ["curve"] }

tiny-keccak = { version = "2.0", features = ["sha3", "keccak"] }
num-bigint = "0.4.4"
num-traits = "0.2.18"
once_cell = "1.19.0"

serde = { version = "1.0.197", default-features = false, features = ["derive"] }



[dev-dependencies]
pretty_assertions = "1.4.0"
serde_json = "1.0.114"


[features]
default = []
serde = []


[[bench]]
name = "fflonk_verifier_bench"
path = "benches/bench.rs"