[package]
name = "ark-fflonk-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false, features = ["derive"] }
ark-poly = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", features = ["curve"] }

num-bigint = "0.4.4"
num-traits = "0.2.18"
once_cell = "1.19.0"

serde = { version = "1.0.197", default-features = false, features = ["derive"] }

on-proving-pairings = {git="https://github.com/SuccinctPaul/on-proving-pairings.git", branch = "feat/support_dual_miller_loop_with_c_wi", package = "on-proving-pairings"}
tiny-keccak = { version = "2.0", features = ["sha3", "keccak"] }
blake3 = "1.5.4"

[dev-dependencies]
serde_json = "1.0.114"


[patch.crates-io]
ark-ff = { git = "https://github.com/SuccinctPaul/arkworks-algebra.git",  branch = "v0.4.2"}
ark-ec = { git = "https://github.com/SuccinctPaul/arkworks-algebra.git",  branch = "v0.4.2"}
ark-serialize = { git = "https://github.com/SuccinctPaul/arkworks-algebra.git",  branch = "v0.4.2"}
ark-poly = { git = "https://github.com/SuccinctPaul/arkworks-algebra.git",  branch = "v0.4.2"}


[[bench]]
name = "fflonk_verifier_bench"
path = "benches/bench.rs"